k8s/scratch-mirror.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: scratch-mirror
  name: scratch-mirror
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scratch-mirror
  strategy: {}
  template:
    metadata:
      labels:
        app: scratch-mirror
    spec:
      containers:
      - image: harbor.high.am/scratch/scratch-mirror
        name: scratch-mirror-server
        ports:
        - containerPort: 3000
        resources: {}
