k8s/scratch-gui.service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scratch-gui
  name: scratch-gui
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: scratch-gui
