k8s/scratch-mirror.service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scratch-mirror
  name: scratch-mirror
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: scratch-mirror
