k8s/web.ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: scratch-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.org/websocket-services: "scratch-mirror"
spec:
  tls:
  - hosts:
    - scratch.high.am
    secretName: scratch-tls
  rules:
  - host: scratch.high.am
    http:
      paths:
      - path: /join
        backend:
          serviceName: scratch-mirror
          servicePort: 80
      - path: /socket
        backend:
          serviceName: scratch-mirror
          servicePort: 80
      - path: /
        backend:
          serviceName: scratch-gui
          servicePort: 80
